# c-homework

./: .gitignore  README.md
hw01-encoding/: Makefile  charsets.c  charsets.h  encoding.c  encoding.h  main.c
hw01-rarjpeg/: .gitignore  Makefile  main.c  zip_util.c  zip_util.h
hw02-libs/: .gitignore  AUTHORS  Makefile  Makefile.am  configure.ac  main.c  weather  weather.h  weather_client.c  weather_client.h  weather_view.c
hw02-libs/src/: weather.h  weather_client.h  weather_view.h
hw03-curl/: README.md
hw04-posix/: fix-leak.patch
hw05-gtk/: CMakeLists.txt  main.c
hw05-gtktree/: meson.build
hw05-gtktree/src/: main.c
hw06-logger/: CMakeLists.txt  main.c
hw06-logger/lib/: log_helper.c  log_helper.h  log_internal.h  logapi.c  logapi.h  logger.c  logger.h
hw06-logger/src/: log_helper.c  log_helper.h  log_internal.c  log_internal.h  logapi.h  logger.c  logger.h
hw08-daemons/: CMakeLists.txt  config.sample  main.c
hw08-daemons/src/: config.c  config.h  error_codes.h  file_size_socket.c  file_size_socket.h
hw08-demons/: CMakeLists.txt  config.sample  main.c
hw08-demons/src/: config.c  config.h  error_codes.h  file_size.c  file_size.h  file_size_socket.c  file_size_socket.h
hw11-telnet-client/: client_main.c
